--- a/WebDriverTest/test-output/old/Suite/methods.html
+++ b/WebDriverTest/test-output/old/Suite/methods.html
@@ -1,6 +1,64 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c78c6b">  <td>18/05/07 16:04:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="QAT2.test()[pri:0, instance:qaeg.QAT2@5419f379]">test</td> 
-  <td>main@1486371051</td>   <td></td> </tr>
+<tr bgcolor="7fa893">  <td>18/08/03 16:39:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setupTest(java.lang.String)[pri:0, instance:com.example.grid.FirstTest@4566e5bd]">&gt;&gt;setupTest</td> 
+<td>&nbsp;</td>  <td>pool-1-thread-2@630561700</td>   <td></td> </tr>
+<tr bgcolor="7fa893">  <td>18/08/03 16:39:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setupTest(java.lang.String)[pri:0, instance:com.example.grid.FirstTest@3159c4b8]">&gt;&gt;setupTest</td> 
+<td>&nbsp;</td>  <td>pool-2-thread-3@153189556</td>   <td></td> </tr>
+<tr bgcolor="7fa893">  <td>18/08/03 16:39:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setupTest(java.lang.String)[pri:0, instance:com.example.grid.FirstTest@3159c4b8]">&gt;&gt;setupTest</td> 
+<td>&nbsp;</td>  <td>pool-2-thread-3@153189556</td>   <td></td> </tr>
+<tr bgcolor="7fa893">  <td>18/08/03 16:39:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setupTest(java.lang.String)[pri:0, instance:com.example.grid.FirstTest@f6c48ac]">&gt;&gt;setupTest</td> 
+<td>&nbsp;</td>  <td>pool-3-thread-1@378262593</td>   <td></td> </tr>
+<tr bgcolor="7fa893">  <td>18/08/03 16:39:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setupTest(java.lang.String)[pri:0, instance:com.example.grid.FirstTest@4566e5bd]">&gt;&gt;setupTest</td> 
+<td>&nbsp;</td>  <td>pool-1-thread-2@630561700</td>   <td></td> </tr>
+<tr bgcolor="7fa893">  <td>18/08/03 16:39:02</td>   <td>3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setupTest(java.lang.String)[pri:0, instance:com.example.grid.FirstTest@3159c4b8]">&gt;&gt;setupTest</td> 
+<td>&nbsp;</td>  <td>pool-2-thread-3@153189556</td>   <td></td> </tr>
+<tr bgcolor="7fa893">  <td>18/08/03 16:39:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setupTest(java.lang.String)[pri:0, instance:com.example.grid.FirstTest@f6c48ac]">&gt;&gt;setupTest</td> 
+<td>&nbsp;</td>  <td>pool-3-thread-1@378262593</td>   <td></td> </tr>
+<tr bgcolor="7fa893">  <td>18/08/03 16:39:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setupTest(java.lang.String)[pri:0, instance:com.example.grid.FirstTest@4566e5bd]">&gt;&gt;setupTest</td> 
+<td>&nbsp;</td>  <td>pool-1-thread-2@630561700</td>   <td></td> </tr>
+<tr bgcolor="7fa893">  <td>18/08/03 16:39:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setupTest(java.lang.String)[pri:0, instance:com.example.grid.FirstTest@f6c48ac]">&gt;&gt;setupTest</td> 
+<td>&nbsp;</td>  <td>pool-3-thread-1@378262593</td>   <td></td> </tr>
+<tr bgcolor="ee68d8">  <td>18/08/03 16:39:06</td>   <td>3602</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FirstTest.GOOGLE3()[pri:0, instance:com.example.grid.FirstTest@3159c4b8]">GOOGLE3</td> 
+  <td>pool-2-thread-3@153189556</td>   <td></td> </tr>
+<tr bgcolor="ee68d8">  <td>18/08/03 16:39:06</td>   <td>3601</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FirstTest.GOOGLE2()[pri:0, instance:com.example.grid.FirstTest@3159c4b8]">GOOGLE2</td> 
+  <td>pool-2-thread-2@779194527</td>   <td></td> </tr>
+<tr bgcolor="7fa893">  <td>18/08/03 16:39:10</td>   <td>8100</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.example.grid.FirstTest@3159c4b8]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>pool-2-thread-1@1124041790</td>   <td></td> </tr>
+<tr bgcolor="7fa893">  <td>18/08/03 16:39:12</td>   <td>10121</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.example.grid.FirstTest@3159c4b8]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>pool-2-thread-1@1124041790</td>   <td></td> </tr>
+<tr bgcolor="ee68d8">  <td>18/08/03 16:39:13</td>   <td>10583</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FirstTest.GOOGLE3()[pri:0, instance:com.example.grid.FirstTest@4566e5bd]">GOOGLE3</td> 
+  <td>pool-1-thread-3@803391614</td>   <td></td> </tr>
+<tr bgcolor="ee68d8">  <td>18/08/03 16:39:13</td>   <td>10908</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FirstTest.GOOGLE2()[pri:0, instance:com.example.grid.FirstTest@f6c48ac]">GOOGLE2</td> 
+  <td>pool-3-thread-2@54612859</td>   <td></td> </tr>
+<tr bgcolor="ee68d8">  <td>18/08/03 16:39:14</td>   <td>11731</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FirstTest.GOOGLE1()[pri:0, instance:com.example.grid.FirstTest@f6c48ac]">GOOGLE1</td> 
+  <td>pool-3-thread-1@378262593</td>   <td></td> </tr>
+<tr bgcolor="7fa893">  <td>18/08/03 16:39:17</td>   <td>14572</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.example.grid.FirstTest@4566e5bd]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>pool-1-thread-1@937592818</td>   <td></td> </tr>
+<tr bgcolor="7fa893">  <td>18/08/03 16:39:20</td>   <td>18211</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.example.grid.FirstTest@f6c48ac]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>pool-3-thread-3@1129137347</td>   <td></td> </tr>
+<tr bgcolor="7fa893">  <td>18/08/03 16:39:21</td>   <td>18631</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.example.grid.FirstTest@f6c48ac]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>pool-3-thread-3@1129137347</td>   <td></td> </tr>
+<tr bgcolor="ee68d8">  <td>18/08/03 16:39:23</td>   <td>20571</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FirstTest.GOOGLE2()[pri:0, instance:com.example.grid.FirstTest@4566e5bd]">GOOGLE2</td> 
+  <td>pool-1-thread-2@630561700</td>   <td></td> </tr>
+<tr bgcolor="ee68d8">  <td>18/08/03 16:39:23</td>   <td>20793</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FirstTest.GOOGLE1()[pri:0, instance:com.example.grid.FirstTest@3159c4b8]">GOOGLE1</td> 
+  <td>pool-2-thread-1@1124041790</td>   <td></td> </tr>
+<tr bgcolor="ee68d8">  <td>18/08/03 16:39:23</td>   <td>20901</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FirstTest.GOOGLE3()[pri:0, instance:com.example.grid.FirstTest@f6c48ac]">GOOGLE3</td> 
+  <td>pool-3-thread-3@1129137347</td>   <td></td> </tr>
+<tr bgcolor="7fa893">  <td>18/08/03 16:39:29</td>   <td>26553</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.example.grid.FirstTest@f6c48ac]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>pool-3-thread-3@1129137347</td>   <td></td> </tr>
+<tr bgcolor="7fa893">  <td>18/08/03 16:39:29</td>   <td>26748</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.terminate()[pri:0, instance:com.example.grid.FirstTest@f6c48ac]">&lt;&lt;terminate</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>pool-3-thread-3@1129137347</td>   <td></td> </tr>
+<tr bgcolor="7fa893">  <td>18/08/03 16:39:30</td>   <td>28407</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.example.grid.FirstTest@3159c4b8]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>pool-2-thread-1@1124041790</td>   <td></td> </tr>
+<tr bgcolor="7fa893">  <td>18/08/03 16:39:31</td>   <td>28533</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.terminate()[pri:0, instance:com.example.grid.FirstTest@3159c4b8]">&lt;&lt;terminate</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>pool-2-thread-1@1124041790</td>   <td></td> </tr>
+<tr bgcolor="7fa893">  <td>18/08/03 16:39:32</td>   <td>29674</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.example.grid.FirstTest@4566e5bd]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>pool-1-thread-1@937592818</td>   <td></td> </tr>
+<tr bgcolor="ee68d8">  <td>18/08/03 16:39:35</td>   <td>32974</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FirstTest.GOOGLE1()[pri:0, instance:com.example.grid.FirstTest@4566e5bd]">GOOGLE1</td> 
+  <td>pool-1-thread-1@937592818</td>   <td></td> </tr>
+<tr bgcolor="7fa893">  <td>18/08/03 16:39:44</td>   <td>42263</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.example.grid.FirstTest@4566e5bd]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>pool-1-thread-1@937592818</td>   <td></td> </tr>
+<tr bgcolor="7fa893">  <td>18/08/03 16:39:45</td>   <td>42780</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.terminate()[pri:0, instance:com.example.grid.FirstTest@4566e5bd]">&lt;&lt;terminate</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>pool-1-thread-1@937592818</td>   <td></td> </tr>
 </table>
